maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:11: error: ';' expected but 'var' found.
  global var sommeAngle
         ^